--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
 
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+
     // moshi for parsing the JSON format
     def moshi_version = "1.13.0"
     implementation "com.squareup.moshi:moshi:$moshi_version"
@@ -90,5 +92,6 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
+    implementation 'com.github.ihimanshurawat:ImageWorker:1.2.0'
 
 }
